--- a/templates/Evo/themes/darkly/less/variables.less
+++ b/templates/Evo/themes/darkly/less/variables.less
@@ -267,8 +267,8 @@
 @zindex-popover:           1060;
 @zindex-tooltip:           1070;
 @zindex-navbar-fixed:      1030;
-@zindex-modal:             1040;
-
+@zindex-modal:             1050;
+@zindex-overall:           9999;
 
 //== Media queries breakpoints
 //
